--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
+    "gsap": "^3.14.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
